GearsetPOC/force-app/main/default/objects/DynamicFAQKeywords__c/DynamicFAQKeywords__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dynamic FAQ Keywords</label>
</CustomObject>