GearsetPOC/force-app/main/default/objects/DynamicFAQKeywords__c/fields/Default_keywords__c.field-meta.xml
<CustomField>
    <fullName>Default_keywords__c</fullName>
    <label>Default keywords</label>
    <type>TextArea</type>
</CustomField>