GearsetPOC/force-app/main/default/objects/DynamicFAQKeywords__c/fields/SiteUrl__c.field-meta.xml
<CustomField>
    <fullName>SiteUrl__c</fullName>
    <label>Site Url</label>
    <type>TextArea</type>
</CustomField>