GearsetPOC/force-app/main/default/objects/DynamicFAQKeywords__c/fields/UrlShouldBeEqual__c.field-meta.xml
<CustomField>
    <fullName>UrlShouldBeEqual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents in the search would be taken using equals expression, not contains</description>
    <inlineHelpText>&quot;Equals&quot; expression is used for search if checked. &quot;Contains&quot; expression used if unchecked</inlineHelpText>
    <label>URL should be equal</label>
    <type>Checkbox</type>
</CustomField>